force-app/main/default/objects/Booking_Room_Line_Price__c/Booking_Room_Line_Price__c.object-meta.xml
<CustomObject>
    <label>Booking Room Line Price</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Booking Room Line Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings Room Line Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>