force-app/main/default/objects/Booking_Room_Line_Price__c/fields/Amount_city_tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_city_tax__c</fullName>
    <label>Amount city tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>