force-app/main/default/objects/Booking_Room_Line_Price__c/fields/Booking_Room_Line_FK__c.field-meta.xml
<CustomField>
    <fullName>Booking_Room_Line_FK__c</fullName>
    <label>Booking Room Line_FK</label>
    <referenceTo>Booking_Room_Line__c</referenceTo>
    <relationshipLabel>Bookings Room Line Price</relationshipLabel>
    <relationshipName>Bookings_Room_Line_Price</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>