force-app/main/default/objects/Booking_Room_Line_Price__c/fields/BookingRoomLinePriceId__c.field-meta.xml
<CustomField>
    <fullName>BookingRoomLinePriceId__c</fullName>
    <label>BookingRoomLinePriceId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>