force-app/main/default/objects/Booking_Room_Line_Price__c/fields/effectivedate__c.field-meta.xml
<CustomField>
    <fullName>effectivedate__c</fullName>
    <label>effectivedate</label>
    <type>Date</type>
</CustomField>