force-app/main/default/objects/Booking_Room_Line_Price__c/fields/expiredate__c.field-meta.xml
<CustomField>
    <fullName>expiredate__c</fullName>
    <label>expiredate</label>
    <type>Date</type>
</CustomField>