force-app/main/default/objects/Booking_Room_Line_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Price_Euros__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>